# pre-commit-warnings-warn

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
tests/: example.py
warnings_stacklevel/: stacklevel.py  warning_stacklevel.py
warnings_stacklevel/tests/: test_placeholder.py
warnings_stacklevel/warnings_stacklevel/: warning_stacklevel.py
