[tool.poetry]
name = "pre-commit-warning-stacklevel"
version = "0.1.0"
description = "A pre-commit hook that ensures emitting warnings does not use the default stacklevel"
authors = ["symonk <jackofspaces@gmail.com>"]
license = "apache"
readme = "README.md"
packages = [{include = "pre_commit_warning_stacklevel"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_single_line = true
known_first_party = 'warnings_stacklevel'
default_section = 'THIRDPARTY'
forced_separate = 'tests'

[tool.mypy]
mypy_path = 'warnings_stacklevel'
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = false
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = false
ignore_errors = false